feat: add sway config files

--- a/.config/ranger/rifle.conf
+++ b/.config/ranger/rifle.conf
@@ -177,7 +177,7 @@ ext cbz,  has zathura,      X, flag f = zathura -- "$@"
 #-------------------------------------------
 # Images
 #-------------------------------------------
-mime ^image/svg, has eog, X, flag f = eog -- "$@"
+mime ^image, has eog, X, flag f = eog -- "$@"
 mime ^image/svg, has inkscape, X, flag f = inkscape -- "$@"
 mime ^image/svg, has display,  X, flag f = display -- "$@"
 
