--- a/.config/i3/config
+++ b/.config/i3/config
@@ -135,6 +135,7 @@ for_window [title="(?i)xvpn"]                                              mark 
 for_window [class="(?i)hubstaff" title="(?i)hubstaff"]                     mark T
 # for_window [class="(?i)dbeaver"]                                           mark D
 for_window [class="(?i)mongodb compass"]                                   mark d
+for_window [class="xvpn"]                                                  mark V
 for_window [class="(?i)pavucontrol"]                                       floating enable
 for_window [class="(?i)gnome-calculator"]                                  floating enable
 
@@ -265,7 +266,6 @@ bindsym $mod+Mod1+bracketright exec mpc seek +10
 
 # find profiles in ~/.cache/google-chrome
 bindsym $mod+c           exec google-chrome-stable --profile-directory=Default
-bindsym $mod+Mod1+Shift+c      exec google-chrome-stable --profile-directory='Profile 9'
 bindsym $mod+Mod1+c      exec google-chrome-stable --profile-directory='Profile 8'
 bindsym $mod+Mod1+f      exec thunar
 bindsym $mod+Mod1+t      exec telegram-desktop
@@ -273,11 +273,10 @@ bindsym $mod+Mod1+m      exec $term --title ncmpcpp -e ncmpcpp -q
 bindsym $mod+Mod1+p      exec $term --title fitimer -e fitimer
 bindsym $mod+Ctrl+c      exec ~/bin/clocks
 bindsym $mod+Mod1+Return exec $term -e ranger
-bindsym $mod+Mod1+d      exec dbeaver
-# bindsym $mod+Mod1+Shift+c exec gnome-calculator
-bindsym $mod+Mod1+v exec --no-startup-id $term \
-  --class 'xvpn' -e sudo xvpn ui
-for_window [class="xvpn"] mark V
+bindsym $mod+Mod1+h      exec ~/Hubstaff/HubstaffClient.bin.x86_64
+bindsym $mod+Mod1+Shift+c exec gnome-calculator
+bindsym $mod+Mod1+v exec --no-startup-id $term --class 'xvpn' -e sudo xvpn ui
+bindsym $mod+Mod1+d      exec mongodb-compass
 
 bindsym $mod+Ctrl+space       exec dunstctl close
 bindsym $mod+Ctrl+Shift+space exec dunstctl history-pop
