--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,18 +5,20 @@ set -ag terminal-overrides ",xterm-256color:RGB"
 # customize status line
 # default for bg makes it transparent
 set -g status-style 'bg=default fg=#a89984'
-# disabling far right
 set -g status-right ' #S '
-# session name (far left)
-# set -g status-left ' #S '
+set -g status-right-length 30 # max size
 set -g status-left ''
-set -g status-left-style 'fg=#a89984 bold'
-set -g status-left-length 30 # max size for session name
 # inactive window
-setw -g window-status-format ' #I #W#F '
+set -g window-status-format ' #I #W#F '
 # active window
-setw -g window-status-current-format '#[bg=#a89984 fg=#282828,bold] #I #W#F '
-# set-window-option -g window-status-separator '#[bg=#3c3836 fg=#3c3836] '
+set -g window-status-current-format ' #I #W#F '
+set -g window-status-current-style 'bg=#a89984 fg=#282828,bold'
+# display pane colors (shown with `C-b q`)
+set -g display-panes-colour '#a89984'
+set -g display-panes-active-colour '#d79921'
+# pane border colors
+set -g pane-border-style 'fg=#282828'
+set -g pane-active-border-style 'fg=#d79921'
 
 # reload tmux config
 bind-key r source-file ~/.tmux.conf
@@ -24,13 +26,22 @@ bind-key r source-file ~/.tmux.conf
 # start first pane from 1 not 0
 set -g base-index 1
 
+# set longer history size for panes
+set -g history-limit 5000
+
+# automatically re-number windows when gaps appear between them
+set -g renumber-windows on
+
 # fix the escape delay in nvim
 set -s escape-time 0
 
 # disable mouse
 set -g mouse on
 # enable vim-like shortcuts
-set-window-option -g mode-keys vi
+set -g mode-keys vi
+set -g status-keys vi
+# prevent copy & clear after mouse drag release
+unbind -Tcopy-mode-vi MouseDragEnd1Pane
 
 # vim-like pane switching
 bind-key -r a last-window
@@ -52,7 +63,9 @@ bind-key -n 'M-9' select-window -t 9
 bind-key -n 'M-^' last-window
 
 # enter select mode
-bind-key -n 'M-c' copy-mode
+bind-key -n 'M-C' copy-mode
+# easier create window
+bind-key -n 'M-c' new-window
 bind-key -n 'M-s' choose-tree -s
 # use v to trigger selection in select mode
 bind-key -T copy-mode-vi v send-keys -X begin-selection
@@ -64,6 +77,5 @@ bind-key -n 'M-.' next-window
 bind-key -n 'M-,' previous-window
 
 # Open project in new session
-# bind-key -r o run-shell "tmux neww ~/bin/tmux-sessionizer"
 bind-key -n 'M-o' run-shell "tmux neww ~/bin/tmux-sessionizer"
 
