--- a/.config/i3/config
+++ b/.config/i3/config
@@ -137,7 +137,7 @@ for_window [class="(?i)hubstaff" title="(?i)hubstaff"]                     mark 
 for_window [class="(?i)mongodb compass"]                                   mark d
 for_window [class="xvpn"]                                                  mark V
 for_window [class="(?i)pavucontrol"]                                       floating enable
-for_window [class="(?i)gnome-calculator"]                                  floating enable
+for_window [class="(?i)qalculate-gtk"]                                     floating enable
 
 ################################################################################
 # Workspaces
@@ -274,9 +274,10 @@ bindsym $mod+Mod1+p      exec $term --title fitimer -e fitimer
 bindsym $mod+Ctrl+c      exec ~/bin/clocks
 bindsym $mod+Mod1+Return exec $term -e ranger
 bindsym $mod+Mod1+h      exec ~/Hubstaff/HubstaffClient.bin.x86_64
-bindsym $mod+Mod1+Shift+c exec gnome-calculator
+bindsym $mod+Mod1+Shift+c exec qalculate-gtk
 bindsym $mod+Mod1+v exec --no-startup-id $term --class 'xvpn' -e sudo xvpn ui
 bindsym $mod+Mod1+d      exec mongodb-compass
+bindsym $mod+Mod1+b      exec $term -e btm
 
 bindsym $mod+Ctrl+space       exec dunstctl close
 bindsym $mod+Ctrl+Shift+space exec dunstctl history-pop
