--- a/.config/i3/config
+++ b/.config/i3/config
@@ -274,8 +274,8 @@ bindsym $mod+Mod1+p      exec $term --title fitimer -e fitimer
 bindsym $mod+Ctrl+c      exec ~/bin/clocks
 bindsym $mod+Mod1+Return exec $term -e ranger
 bindsym $mod+Mod1+h      exec ~/Hubstaff/HubstaffClient.bin.x86_64
-bindsym $mod+Mod1+Shift+c exec qalculate-gtk
-bindsym $mod+Mod1+v exec --no-startup-id $term --class 'xvpn' -e sudo xvpn ui
+bindsym $mod+Mod1+q      exec qalculate-gtk
+bindsym $mod+Mod1+v      exec --no-startup-id $term --class 'xvpn' -e sudo xvpn ui
 bindsym $mod+Mod1+d      exec mongodb-compass
 bindsym $mod+Mod1+b      exec $term -e btm
 
