--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -30,7 +30,7 @@ markup=none
 
 [keyindicator]
 label=
-command=/home/m47h4r/.config/i3/i3blocks-scripts/keyindicator
+command=/home/mazhar/.config/i3/i3blocks-scripts/keyindicator
 KEY=CAPS
 markup=pango
 interval=once
@@ -40,7 +40,7 @@ HIDE_WHEN_OFF=1
 
 [keyindicator]
 label=
-command=/home/m47h4r/.config/i3/i3blocks-scripts/keyindicator
+command=/home/mazhar/.config/i3/i3blocks-scripts/keyindicator
 KEY=NUM
 markup=pango
 interval=once
@@ -49,7 +49,7 @@ COLOR_ON=#cc241d
 HIDE_WHEN_OFF=1
 
 [song]
-command=/home/m47h4r/.config/i3/i3blocks-scripts/current-song
+command=/home/mazhar/.config/i3/i3blocks-scripts/current-song
 interval=20
 signal=11
 color=#dadada
@@ -63,7 +63,7 @@ interval=30
 signal=11
 
 [backlight]
-command=/home/m47h4r/.config/i3/i3blocks-scripts/backlight
+command=/home/mazhar/.config/i3/i3blocks-scripts/backlight
 color=#dadada
 signal=11
 interval=5
@@ -71,27 +71,27 @@ markup=pango
 
 [volume]
 color=#dadada
-command=/home/m47h4r/.config/i3/i3blocks-scripts/volume
+command=/home/mazhar/.config/i3/i3blocks-scripts/volume
 interval=5
 signal=11
 markup=pango
 
 [cpu]
 color=#dadada
-command=/home/m47h4r/.config/i3/i3blocks-scripts/cpu
+command=/home/mazhar/.config/i3/i3blocks-scripts/cpu
 interval=10
 markup=pango
 
 [memory]
 color=#dadada
-command=/home/m47h4r/.config/i3/i3blocks-scripts/memory
+command=/home/mazhar/.config/i3/i3blocks-scripts/memory
 interval=10
 markup=pango
 
 # [battery]
 # label=  
 # color=#dadada
-# command=/home/m47h4r/.config/i3/i3blocks-scripts/battery
+# command=/home/mazhar/.config/i3/i3blocks-scripts/battery
 # interval=30
 # markup=pango
 
@@ -101,7 +101,7 @@ color=#dadada
 interval=60
 
 [jdate]
-command=/home/m47h4r/.config/i3/i3blocks-scripts/jdate
+command=/home/mazhar/.config/i3/i3blocks-scripts/jdate
 color=#dadada
 interval=60
 
@@ -111,7 +111,7 @@ interval=5
 color=#dadada
 
 [dunst-status]
-command=/home/m47h4r/.config/i3/i3blocks-scripts/dunst-status
+command=/home/mazhar/.config/i3/i3blocks-scripts/dunst-status
 interval=60
 markup=pango
 signal=11
