--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -88,12 +88,12 @@ command=/home/mazhar/.config/i3/i3blocks-scripts/memory
 interval=10
 markup=pango
 
-# [battery]
-# label=  
-# color=#dadada
-# command=/home/mazhar/.config/i3/i3blocks-scripts/battery
-# interval=30
-# markup=pango
+[battery]
+label= 
+color=#dadada
+command=/home/mazhar/.config/i3/i3blocks-scripts/battery
+interval=30
+markup=pango
 
 [date]
 command=date '+%Y %a, %b %d'
