--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -141,7 +141,7 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 #
 # fix for stacked windows showing up under transparent windows
 opacity-rule = [
-  "0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
+  "0:_NET_WM_STATE@[*]:a *= '_NET_WM_STATE_HIDDEN'",
 ]
 
 
