--- a/.config/i3/config
+++ b/.config/i3/config
@@ -273,11 +273,12 @@ bindsym $mod+Mod1+m      exec $term --title ncmpcpp -e ncmpcpp -q
 bindsym $mod+Mod1+p      exec $term --title fitimer -e fitimer
 bindsym $mod+Ctrl+c      exec ~/bin/clocks
 bindsym $mod+Mod1+Return exec $term -e ranger
-bindsym $mod+Mod1+h      exec ~/builds/hubstaff/Hubstaff/HubstaffClient.bin.x86_64
+bindsym $mod+Mod1+h      exec ~/builds/Hubstaff/HubstaffClient.bin.x86_64
 bindsym $mod+Mod1+q      exec qalculate-gtk
 bindsym $mod+Mod1+v      exec --no-startup-id $term --class 'xvpn' -e sudo xvpn ui
-bindsym $mod+Mod1+d      exec mongodb-compass
+bindsym $mod+Mod1+d      exec mongodb-compass --disable-gpu
 bindsym $mod+Mod1+b      exec $term -e btm
+bindsym $mod+Mod1+o      exec /opt/oblivion-desktop/oblivion-desktop
 
 bindsym $mod+Ctrl+space       exec dunstctl close
 bindsym $mod+Ctrl+Shift+space exec dunstctl history-pop
