--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,10 +9,10 @@ set -g status-right ' #S '
 set -g status-right-length 30 # max size
 set -g status-left ''
 # inactive window
-set -g window-status-format ' #I #W#F '
-# active window
-set -g window-status-current-format ' #I #W#F '
-set -g window-status-current-style 'bg=#a89984 fg=#282828,bold'
+set -g window-status-format '#[noreverse]#[reverse]#I #W#[noreverse]#[reverse]'
+set -g window-status-current-format '#[noreverse]#[reverse]#I #W#[noreverse]#[reverse]'
+set -g window-status-last-style 'bg=default fg=#d79921'
+set -g window-status-current-style 'bg=default fg=#d65d0e,bold'
 # display pane colors (shown with `C-b q`)
 set -g display-panes-colour '#a89984'
 set -g display-panes-active-colour '#d79921'
