--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -50,9 +50,10 @@ HIDE_WHEN_OFF=1
 
 [song]
 command=/home/mazhar/.config/i3/i3blocks-scripts/current-song
-interval=20
+interval=15
 signal=11
 color=#dadada
+markup=pango
 
 # this needs xkb-switch-git from AUR
 [keymap]
@@ -66,26 +67,26 @@ signal=11
 command=/home/mazhar/.config/i3/i3blocks-scripts/backlight
 color=#dadada
 signal=11
-interval=5
+interval=once
 markup=pango
 
 [volume]
 color=#dadada
 command=/home/mazhar/.config/i3/i3blocks-scripts/volume
-interval=5
+interval=10
 signal=11
 markup=pango
 
 [cpu]
 color=#dadada
 command=/home/mazhar/.config/i3/i3blocks-scripts/cpu
-interval=10
+interval=15
 markup=pango
 
 [memory]
 color=#dadada
 command=/home/mazhar/.config/i3/i3blocks-scripts/memory
-interval=10
+interval=15
 markup=pango
 
 [battery]
@@ -106,7 +107,7 @@ interval=60
 
 [time]
 command=date '+%H:%M'
-interval=5
+interval=15
 color=#dadada
 
 [dunst-status]
