--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -52,10 +52,11 @@ text = "#282828"
 
 [env]
 TERM = "xterm-256color"
+# fix for different monitor scaling
+WINIT_X11_SCALE_FACTOR = "1.40"
 
 [font]
 size = 10.0
-# size = 14.0
 
 [font.normal]
 family = "FiraCode Nerd Font"
