--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -292,12 +292,10 @@ rules: ({
   match = "window_type = 'dock'    || "
           "window_type = 'desktop' || "
           "class_g = 'slop' || "
-          # from old config, in case u need them
-          # "window_type = 'desktop'",
-          # "window_type = 'menu'",
-          # "window_type = 'dropdown_menu'",
-          # "window_type = 'popup_menu'",
-          # "window_type = 'tooltip'",
+          "window_type = 'menu' || "
+          "window_type = 'dropdown_menu' || "
+          "window_type = 'popup_menu' || "
+          "window_type = 'tooltip' || "
           "_GTK_FRAME_EXTENTS@";
   blur-background = false;
 }, {
@@ -311,13 +309,11 @@ rules: ({
   blur-background = true;
 }, {
   match = "name = 'Notification'   || "
-          "class_g = 'Cairo-clock' || "
-          # from old config in case u need it
-          # "class_g = 'i3-frame' || "
-          # "window_type = 'menu' || "
-          # "window_type = 'dropdown_menu' || "
-          # "window_type = 'popup_menu' || "
-          # "window_type = 'tooltip' || "
+          "class_g = 'i3-frame' || "
+          "window_type = 'menu' || "
+          "window_type = 'dropdown_menu' || "
+          "window_type = 'popup_menu' || "
+          "window_type = 'tooltip' || "
           "_GTK_FRAME_EXTENTS@";
   shadow = false;
 },{
