--- a/.config/i3/config
+++ b/.config/i3/config
@@ -215,6 +215,8 @@ bar {
   tray_padding 2
   font pango:FiraCode Nerd Font 12
   separator_symbol "│"
+  tray_output primary
+  # tray_output DP-1-2
   
   colors {
     # background #282828
