--- a/.config/lazygit/config.yml
+++ b/.config/lazygit/config.yml
@@ -8,4 +8,5 @@ git:
   autoFetch: false
   autoRefresh: false
   branchLogCmd: "git log --color=always --abbrev-commit --decorate --pretty=medium {{branchName}} --"
-  allBranchesLogCmd: "git log --all --color=always --abbrev-commit --decorate --pretty=medium"
+  allBranchesLogCmds:
+    - git log --all --color=always --abbrev-commit --decorate --pretty=medium
