--- a/.config/i3/config
+++ b/.config/i3/config
@@ -275,11 +275,11 @@ bindsym $mod+Mod1+t      exec Telegram
 bindsym $mod+Mod1+m      exec $term --title ncmpcpp -e ncmpcpp -q
 bindsym $mod+Mod1+p      exec $term --title fitimer -e fitimer
 bindsym $mod+Ctrl+c      exec ~/bin/clocks
-bindsym $mod+Mod1+Return exec $term -e ranger
+bindsym $mod+Mod1+Return exec $term -e lf
 bindsym $mod+Mod1+h      exec ~/builds/Hubstaff/HubstaffClient.bin.x86_64
 bindsym $mod+Mod1+q      exec qalculate-gtk
 bindsym $mod+Mod1+v      exec --no-startup-id $term --class 'xvpn' -e sudo xvpn ui
-bindsym $mod+Mod1+d      exec mongodb-compass --disable-gpu
+bindsym $mod+Mod1+d      exec /home/mazhar/builds/mongodb-compass/MongoDB\ Compass --disable-gpu
 bindsym $mod+Mod1+b      exec $term -e btm
 bindsym $mod+Mod1+o      exec /opt/oblivion-desktop/oblivion-desktop
 
