--- a/.config/sway/config
+++ b/.config/sway/config
@@ -294,7 +294,7 @@ bindsym $mod+Mod1+t       exec telegram-desktop
 bindsym $mod+Mod1+m       exec $term --title ncmpcpp -e ncmpcpp -q
 bindsym $mod+Mod1+p       exec $term --title fitimer -e fitimer
 bindsym $mod+Ctrl+c       exec ~/bin/clocks
-bindsym $mod+Mod1+Return  exec $term -e ranger
+bindsym $mod+Mod1+Return  exec $term -e lf
 bindsym $mod+Mod1+Shift+c exec gnome-calculator
 bindsym $mod+Mod1+v exec --no-startup-id $term \
   --class 'xvpn' -e sudo xvpn ui
