--- a/.tmux.conf
+++ b/.tmux.conf
@@ -75,6 +75,8 @@ bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -i -sel clip
 # Navigate windows
 bind-key -n 'M-.' next-window
 bind-key -n 'M-,' previous-window
+bind-key -n 'M->' swap-window -t +1 -d
+bind-key -n 'M-<' swap-window -t -1 -d
 
 # Open project in new session
 bind-key -n 'M-o' run-shell "tmux neww ~/bin/tmux-sessionizer"
