--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -55,6 +55,13 @@ signal=11
 color=#dadada
 markup=pango
 
+[ip-location]
+label= 
+command=/home/mazhar/.config/i3/i3blocks-scripts/ip-location
+signal=10
+color=#dadada
+interval=once
+
 # this needs xkb-switch-git from AUR
 [keymap]
 color=#dadada
