feat: update snippet shortcuts & reformat picom rules

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -282,45 +282,52 @@ transparent-clipping = false
 # Rule-based per-window options.
 #
 # See WINDOW RULES section in the man page for how these work.
-rules: ({
-  match = "window_type = 'tooltip'";
-  fade = true;
-  shadow = true;
-  opacity = 0.8;
-  full-shadow = false;
-}, {
-  match = "window_type = 'dock'    || "
-          "window_type = 'desktop' || "
-          "class_g = 'slop' || "
-          "window_type = 'menu' || "
-          "window_type = 'dropdown_menu' || "
-          "window_type = 'popup_menu' || "
-          "window_type = 'tooltip' || "
-          "_GTK_FRAME_EXTENTS@";
-  blur-background = false;
-}, {
-  match = "window_type != 'dock'";
-  # shader = "my_shader.frag";
-}, {
-  match = "window_type = 'dock' || "
-          "window_type = 'desktop'";
-  opacity = 0.8;
-  clip-shadow-above = true;
-  blur-background = true;
-}, {
-  match = "name = 'Notification'   || "
-          "class_g = 'i3-frame' || "
-          "window_type = 'menu' || "
-          "window_type = 'dropdown_menu' || "
-          "window_type = 'popup_menu' || "
-          "window_type = 'tooltip' || "
-          "_GTK_FRAME_EXTENTS@";
-  shadow = false;
-},{
-  # fix to show desktop background instead of other windows when tabbed/stacked
-  match = "_NET_WM_STATE@[*] *= '_NET_WM_STATE_HIDDEN'";
-  opacity = 0;
-})
+rules: (
+  {
+    match = "window_type = 'tooltip'";
+    fade = true;
+    shadow = true;
+    opacity = 0.8;
+    full-shadow = false;
+  },
+  {
+    match = "window_type = 'dock'    || "
+            "window_type = 'desktop' || "
+            "class_g = 'slop' || "
+            "window_type = 'menu' || "
+            "window_type = 'dropdown_menu' || "
+            "window_type = 'popup_menu' || "
+            "window_type = 'tooltip' || "
+            "_GTK_FRAME_EXTENTS@";
+    blur-background = false;
+  },
+  {
+    match = "window_type != 'dock'";
+    # shader = "my_shader.frag";
+  },
+  {
+    match = "window_type = 'dock' || "
+            "window_type = 'desktop'";
+    opacity = 0.8;
+    clip-shadow-above = true;
+    blur-background = true;
+  },
+  {
+    match = "name = 'Notification'   || "
+            "class_g = 'i3-frame' || "
+            "window_type = 'menu' || "
+            "window_type = 'dropdown_menu' || "
+            "window_type = 'popup_menu' || "
+            "window_type = 'tooltip' || "
+            "_GTK_FRAME_EXTENTS@";
+    shadow = false;
+  },
+  {
+    # fix to show desktop background instead of other windows when tabbed/stacked
+    match = "_NET_WM_STATE@[*] *= '_NET_WM_STATE_HIDDEN'";
+    opacity = 0;
+  }
+)
 
 # `@include` directive can be used to include additional configuration files.
 # Relative paths are search either in the parent of this configuration file
